# backend

./: .env.example  .gitignore  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy.yml  lint.yml
app/: config.py  connection.py  database.py  logging_config.py  main.py
app/commons/: methods.py  queries.py
app/routers/auth/: methods.py  queries.py  router.py  schemas.py
app/routers/models/: methods.py  queries.py  router.py  schemas.py
app/routers/projects/: methods.py  queries.py  router.py  schemas.py
app/routers/sql_client/: methods.py  queries.py  router.py  schemas.py
app/routers/tables/: methods.py  queries.py  router.py  schemas.py
app/routers/tasks/: methods.py  queries.py  router.py  schemas.py
app/schemas/: generic_model.sql  schema_info.py  supply_planning.sql  supply_planning_with_data.sql
celery_app/: __init__.py  celery.py  database.py  methods.py  queries.py  task_logging.py  tasks.py
scheduler/: __init__.py  database.py  methods.py  queries.py  runner.py  task_init_data.py  tasks.py
scheduler/_tasks/: cancel_long_running_tasks.py  clean_up.py  queries.py  revoke_tasks.py
scheduler/tasks/: clean_up.py  queries.py
