[project]
name = "backend-v2"
version = "0.1.0"
description = "FastAPI backend with raw SQLite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "apsw>=3.53.0.0",
    "python-dotenv>=1.2.2",
    "pydantic[email]>=2.13.3",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.22",
    "gunicorn>=25.3.0",
    "xlsxwriter>=3.2.9",
    "python-calamine>=0.6.2",
    "pandas>=3.0.2",
]

[dependency-groups]
dev = [
    "ruff",
]

[project.scripts]
dev = "uvicorn app.main:app --reload"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
